syntax="proto3";
option go_package = "./src/proto/gen";

service VotesService {
  rpc Upvote(UpvoteReq) returns (UpvoteRes);
  rpc Downvote(DownvoteReq) returns (DownvoteRes);
  rpc CreateCrypto(CreateCryptoReq) returns (CreateCryptoRes);
  rpc DeleteCrypto(DeleteCryptoReq) returns (DeleteCryptoRes);
  rpc RecordVotes(RecordVotesReq) returns (stream RecordVotesRes);
}

enum Name {
  BTC = 0;
  ETH = 1;
  LTC = 2;
  XRP = 3;
  BNB = 4;
}

message UpvoteReq {
  Name name = 1;
}

message UpvoteRes {
  bool success = 1;
}

message DownvoteReq {
  Name name = 1;
}

message DownvoteRes {
  bool success = 1;
}

message CreateCryptoReq {
  Name name = 1;
}

message CreateCryptoRes {
  bool success = 1;
}

message DeleteCryptoReq {
  string id = 1;
}

message DeleteCryptoRes {
  bool success = 1;
}

message RecordVotesReq {}

message RecordVotesRes {
  string name = 1;
  int64 upvote = 2;
  int64 downvote = 3;
}